# finlink

./: .gitignore  README.md
assets/logo/: README.md
clients/3ds/: CMakeLists.txt  README.md
clients/3ds/source/: audio.cpp  audio.hpp  discovery.cpp  discovery.hpp  gba_buttons.hpp  main.cpp  prefs.cpp  prefs.hpp  session.cpp  session.hpp  ui.hpp  video_tex.cpp  video_tex.hpp
clients/android/: README.md  settings.gradle.kts
clients/android/app/: build.gradle.kts
clients/android/app/src/main/: AndroidManifest.xml
clients/android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.c
clients/android/app/src/main/java/com/finlink/android/: GbaButtons.kt  GbaStreamClient.kt  MainActivity.kt  MenuActivity.kt  PlayerActivity.kt  Prefs.kt  SettingsActivity.kt  Theme.kt
clients/android/app/src/main/res/layout/: activity_main.xml
clients/android/app/src/main/res/values/: strings.xml  themes.xml
clients/nds/: README.md
clients/switch/: CMakeLists.txt  README.md
clients/switch/source/: discovery.cpp  discovery.hpp  frame_poller.hpp  gba_buttons.hpp  main.cpp  menu_activity.cpp  menu_activity.hpp  player_activity.cpp  player_activity.hpp  prefs.cpp  prefs.hpp  session.cpp  session.hpp  settings_activity.cpp  settings_activity.hpp  video_view.cpp  video_view.hpp
core/: CMakeLists.txt  README.md
core/include/finlink/: endian.h  inflate.h  protocol.h  websocket.h
core/src/: inflate.c  protocol.c  websocket.c
core/tests/: CMakeLists.txt  test_inflate.c  test_protocol.c  test_websocket.c
docs/: nds-feasibility.md  protocol.md
